components/storage/longhorn/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  # labels:
  #   enable-oauth: "false"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/description: "Distributed Block Storage"
    gethomepage.dev/group: "Infrastructure & Management"
    gethomepage.dev/icon: "longhorn.png"

spec:
  ingressClassName: traefik
  rules:
  - host: longhorn.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
